--- a/NN/Training.ipynb
+++ b/NN/Training.ipynb
@@ -119,8 +119,10 @@
       },
       "outputs": [],
       "source": [
-        "# Load images and resize them\n",
         "def load_images(path: str, label: int) -> np.ndarray:\n",
+        "  \"\"\"\n",
+        "    Loads images in path, resize them, convert to numpy and add labels to them\n",
+        "  \"\"\"\n",
         "  XC = np.array([\n",
         "      img_to_array(load_img(path + i, target_size=(height, width), keep_aspect_ratio=True)) / 255\n",
         "      for i in os.listdir(path)\n",
@@ -137,6 +139,7 @@
       },
       "outputs": [],
       "source": [
+        "# call load_images to load female and male sets\n",
         "X_train_female, y_train_female = load_images(path=train_female, label=1)\n",
         "X_train_male, y_train_male = load_images(path=train_male, label=0)\n",
         "\n",
@@ -152,6 +155,7 @@
       },
       "outputs": [],
       "source": [
+        "# create pre-train and pre-test from female and male sets\n",
         "X_train_ = np.concatenate((X_train_female, X_train_male), axis=0)\n",
         "y_train_ = np.concatenate((y_train_female, y_train_male), axis=0)\n",
         "X_test = np.concatenate((X_test_female, X_test_male), axis=0)\n",
@@ -166,6 +170,7 @@
       },
       "outputs": [],
       "source": [
+        "# shuffle train and test sets\n",
         "test_args = np.random.choice(y_train_.shape[0], int(y_train_.shape[0]*0.1), replace=False)\n",
         "train_args = [i for i in range(y_train_.shape[0]) if i not in test_args]\n",
         "np.random.shuffle(train_args)"
@@ -248,6 +253,7 @@
       },
       "outputs": [],
       "source": [
+        "# call tenconv to convert train, test and eval sets to tensors\n",
         "X_train, y_train = tenconv([X_train, y_train])\n",
         "X_test, y_test = tenconv([X_test, y_test])\n",
         "X_eval, y_eval = tenconv([X_eval, y_eval])"
@@ -261,7 +267,7 @@
       },
       "outputs": [],
       "source": [
-        "# tensorize\n",
+        "# convert to tf.data.Dataset\n",
         "train_dataset = tf.data.Dataset.from_tensor_slices((X_train, y_train))\n",
         "test_dataset = tf.data.Dataset.from_tensor_slices((X_test, y_test))\n",
         "validation_dataset = tf.data.Dataset.from_tensor_slices((X_eval, y_eval))"
@@ -275,7 +281,7 @@
       },
       "outputs": [],
       "source": [
-        "# batchsize\n",
+        "# divide by batchsize\n",
         "batch_size = 12\n",
         "train_dataset = train_dataset.batch(batch_size).shuffle(buffer_size=800)\n",
         "test_dataset = test_dataset.batch(batch_size)\n",
@@ -309,28 +315,28 @@
         "            preprocessing.RandomRotation(0.1),\n",
         "            preprocessing.RandomZoom(0.1)\n",
         "        ])\n",
-        "\n",
+        "        # Convolutional layers\n",
         "        self.conv1 = Conv2D(10, (7, 7), activation='relu')\n",
         "        self.maxpool1 = MaxPool2D((6, 6))\n",
         "        self.conv2 = Conv2D(20, (7, 7), activation='relu')\n",
         "        self.maxpool2 = MaxPool2D((6, 6))\n",
         "        self.conv3 = Conv2D(32, (5, 5), activation='relu')\n",
         "        self.flatten = Flatten()\n",
+        "        # Dense layers\n",
         "        self.dense1 = Dense(64, activation='relu')\n",
         "        self.dense2 = Dense(1, activation='sigmoid')\n",
         "\n",
         "    def call(self, inputs):\n",
-        "        # if training:\n",
+        "        # Apply data augmentation\n",
         "        augmented_inputs = self.augmentation(inputs)\n",
-        "        # else:\n",
-        "        #     augmented_inputs = inputs\n",
-        "\n",
+        "        # Apply convolutional layers\n",
         "        x = self.conv1(augmented_inputs)\n",
         "        x = self.maxpool1(x)\n",
         "        x = self.conv2(x)\n",
         "        x = self.maxpool2(x)\n",
         "        x = self.conv3(x)\n",
         "        x = self.flatten(x)\n",
+        "        # Apply dense layers\n",
         "        x = self.dense1(x)\n",
         "        return self.dense2(x)\n"
       ]
@@ -347,9 +353,11 @@
         "model = GenderClassification()\n",
         "\n",
         "# Compile the model\n",
-        "model.compile(optimizer=Adam(learning_rate=1e-3),\n",
-        "              loss='binary_crossentropy',\n",
-        "              metrics=[\"accuracy\", AUC()])"
+        "model.compile(\n",
+        "    optimizer=Adam(learning_rate=1e-3),\n",
+        "    loss='binary_crossentropy',\n",
+        "    metrics=[\"accuracy\", AUC()]\n",
+        ")"
       ]
     },
     {
@@ -360,7 +368,7 @@
       },
       "outputs": [],
       "source": [
-        "model.build((32, 225, 225, 3))"
+        "model.build((32, 225, 225, 3)) # necessary step to summarize the model"
       ]
     },
     {
@@ -411,7 +419,9 @@
         }
       ],
       "source": [
-        "model.summary()"
+        "model.summary()\n",
+        "# Note: the relevant number of paramters to take into consideration, \n",
+        "# to avoid overfitting, is the total in the dense layers (2112)"
       ]
     },
     {
@@ -447,7 +457,7 @@
         "    train_dataset,\n",
         "    epochs=5,\n",
         "    validation_data=validation_dataset,\n",
-        "    # callbacks = [es, mc]\n",
+        "    # callbacks = [es, mc] # add callbacks later\n",
         ")"
       ]
     },
